--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,7 +3,12 @@
         "browser": true,
         "es2021": true
     },
-    "extends": ["plugin:react/recommended", "airbnb", "prettier", "airbnb-typescript"],
+    "extends": [
+        "plugin:react/recommended",
+        "airbnb",
+        "prettier",
+        "airbnb-typescript"
+    ],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
         "ecmaFeatures": {
@@ -13,13 +18,28 @@
         "sourceType": "module",
         "project": "./tsconfig.json"
     },
-    "plugins": ["react", "@typescript-eslint", "prettier"],
+    "plugins": [
+        "react",
+        "@typescript-eslint",
+        "prettier"
+    ],
     "rules": {
         "linebreak-style": "off",
         "@typescript-eslint/explicit-module-boundary-types": "off",
         "import/prefer-default-export": "off",
-        "react/jsx-filename-extension": [1, { "extensions": [".tsx"]}],
-        "react/function-component-definition": [0],
-        "react/react-in-jsx-scope": [0]
+        "react/jsx-filename-extension": [
+            1,
+            {
+                "extensions": [
+                    ".tsx"
+                ]
+            }
+        ],
+        "react/function-component-definition": [
+            0
+        ],
+        "react/react-in-jsx-scope": [
+            0
+        ]
     }
 }
