--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -59,6 +59,7 @@
                 "ts": "never",
                 "tsx": "never"
             }
-        ]
+        ],
+        "react/jsx-props-no-spreading": "off"
     }
 }
