--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "styled-components": "^5.3.3",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1",
-    "xlsx": "^0.17.4"
+    "xlsx": "^0.17.4",
+    "react-icons": "^4.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
