--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
     "@types/react-dom": "^17.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-router-dom": "^6.1.1",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.3",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1",
-    "xlsx": "^0.17.4",
-    "react-icons": "^4.3.1"
+    "xlsx": "^0.17.4"
   },
   "scripts": {
     "start": "react-scripts start",
